<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:background="@drawable/border"
        android:id="@+id/list_layout">

    <!--Egység-->
    <TextView
            android:text="@string/receiptproduct_ft"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/ft2"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:layout_marginTop="12dp"
            android:textStyle="bold" android:layout_alignParentEnd="true" android:layout_marginEnd="25dp"/>
    <TextView
            android:text="@string/receiptproduct_ft"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/ft"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textAlignment="gravity"
            android:layout_toEndOf="@+id/egysegar"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="25dp"/>
    <TextView
            android:text="@string/receiptproduct_egyseg"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/egyseg"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:layout_toEndOf="@+id/mennyiseg"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="5dp"
            android:textColorLink="@color/colorPrimary"
            android:layout_marginTop="25dp"/>
    <!--Termék név-->
    <TextView
            android:text="@string/receiptproduct_name"
            android:layout_width="214dp"
            android:layout_height="20dp"
            android:id="@+id/name"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textAlignment="viewStart"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
    <!--Egységár-->
    <TextView
            android:text="@string/receiptproduct_egysegar"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/egysegar"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textAlignment="textEnd"
            android:layout_toEndOf="@+id/egyseg"
            android:layout_marginStart="12dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"/>
    <!--Mennyiség-->
    <TextView
            android:text="@string/receiptproduct_mennyiseg"
            android:layout_width="35dp"
            android:layout_height="20dp"
            android:id="@+id/mennyiseg"
            android:layout_marginStart="12dp"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_alignParentStart="true"
            android:textAlignment="viewEnd"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="25dp"/>
    <!--Ár-->
    <TextView
            android:text="@string/receiptproduct_ar"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:id="@+id/price"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textAlignment="viewEnd"
            android:layout_marginTop="12dp"
            android:layout_toStartOf="@+id/ft2" android:layout_marginEnd="5dp"/>

</RelativeLayout>