<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <!--Ár-->
    <TextView
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label1"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:textSize="@dimen/customTitle"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/label2"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/amountField"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/hint_amount"
            tools:targetApi="o"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nameField"
            android:backgroundTint="@color/colorPrimary" android:textSize="@dimen/customTitle"/>
    <!--Termék-->

    <TextView
            android:text="@string/product"
            android:textColor="?android:textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:textSize="@dimen/customTitle"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/nameField"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/dream_name"
            android:inputType="text"
            tools:targetApi="o"
            android:backgroundTint="@color/colorPrimary" android:textSize="@dimen/customTitle"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
    <!--Hol-->
    <TextView
            android:text="@string/where"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label3"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:textSize="@dimen/customTitle"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/label1"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/whereField"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/hint_string"
            tools:targetApi="o"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/amountField"
            android:backgroundTint="@color/colorPrimary" android:textSize="@dimen/customTitle"/>

    <!--Rögzítés-->

</androidx.constraintlayout.widget.ConstraintLayout>