<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".IncomeActivity"
        tools:showIn="@layout/activity_newproduct"
        android:background="@android:color/transparent">

    <!--Cím-->
    <TextView
            android:text="@string/product_string"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/cim"
            android:textSize="24sp"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496"/>
    <!--Kategória-->
    <TextView
            android:text="@string/product_category"
            android:textColor="@color/black"
            android:layout_width="90dp"
            android:layout_height="31dp"
            android:id="@+id/categoryString"
            android:textSize="18sp"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toStartOf="@+id/categoryField"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/cim"/>
    <Spinner
            android:layout_width="213dp"
            android:layout_height="35dp"
            android:id="@+id/categoryField"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="44dp"
            android:entries="@array/category_array"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/cim"/>
    <!--Termék neve-->
    <TextView
            android:text="@string/product_name"
            android:layout_width="91dp"
            android:layout_height="31dp"
            android:id="@+id/product_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/productName"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/categoryString"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.319"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/productName"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="44dp"
            android:autofillHints=""
            android:hint="@string/product_namehint"
            tools:targetApi="o"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/categoryField"/>
    <!--Mennyiség-->
    <TextView
            android:text="@string/product_mennyiseg"
            android:layout_width="91dp"
            android:layout_height="31dp"
            android:id="@+id/mennyiseg"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/mennyisegField"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/product_name"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.319"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/mennyisegField"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="44dp"
            android:autofillHints=""
            android:hint="@string/product_mennyiseghint"
            tools:targetApi="o"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/productName"/>
    <!--Egység-->
    <TextView
            android:text="@string/product_egyseg"
            android:layout_width="91dp"
            android:layout_height="31dp"
            android:id="@+id/egyseg"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/mennyiseg"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/egysegField"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.34"/>
    <Spinner
            android:layout_width="213dp"
            android:layout_height="35dp"
            android:id="@+id/egysegField"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="44dp"
            android:entries="@array/egyseg_array"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/mennyisegField"/>
    <!--Egységár-->
    <TextView
            android:text="@string/product_egysegar"
            android:layout_width="91dp"
            android:layout_height="31dp"
            android:id="@+id/egysegar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/egyseg"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/ar"
            app:layout_constraintHorizontal_bias="0.319"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/ar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="48dp"
            android:autofillHints=""
            android:hint="@string/product_egyseghint"
            tools:targetApi="o"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/egysegField"/>
    <!--Jótállás-->
    <CheckBox
            android:text="@string/product_jotallas"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/jotallas"
            app:layout_constraintEnd_toStartOf="@+id/lejaratdate"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/egysegar"
            android:layout_marginEnd="8dp" android:textSize="16sp"/>
    <TextView
            android:text="@string/product_jotallasdate"
            android:textColor="@color/black"
            android:layout_width="90dp"
            android:layout_height="31dp"
            android:id="@+id/label"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/lejaratdate"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/jotallas"
            app:layout_constraintHorizontal_bias="0.386"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/lejaratdate"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="48dp"
            android:autofillHints=""
            android:hint="@string/product_jotallashint"
            tools:targetApi="o"
            android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/ar"/>

</androidx.constraintlayout.widget.ConstraintLayout>