<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <!--Kategória-->
    <TextView
            android:text="@string/product_category"
            android:textColor="?android:textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/categoryString"
            android:textSize="@dimen/customTitle"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Spinner
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/categoryField"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary" app:layout_constraintTop_toTopOf="parent"/>
    <!--Termék neve-->
    <TextView
            android:text="@string/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_name"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/customTitle"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/categoryString"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/productName"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/product_namehint"
            tools:targetApi="o"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/categoryField"
            android:backgroundTint="@color/colorPrimary" android:textSize="@dimen/customTitle"
            android:textColorHighlight="@color/toolbar" android:textColorLink="@color/toolbar"
            android:textCursorDrawable="@color/toolbar"/>
    <!--Mennyiség-->
    <TextView
            android:text="@string/product_mennyiseg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mennyiseg"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/customTitle"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/product_name"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/quantityField"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/product_mennyiseghint"
            tools:targetApi="o"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/productName"
            android:backgroundTint="@color/colorPrimary" android:textSize="@dimen/customTitle"/>
    <!--Egység-->
    <TextView
            android:text="@string/product_egyseg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/egyseg"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/customTitle"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/mennyiseg"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
    />
    <Spinner
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/unitField"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:entries="@array/egyseg_array"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/quantityField" android:backgroundTint="@color/colorPrimary"/>
    <!--Egységár-->
    <TextView
            android:text="@string/product_egysegar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/egysegar"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/customTitle"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/egyseg"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/priceField"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/unitField"
            android:backgroundTint="@color/colorPrimary" tools:ignore="Autofill,LabelFor"
            android:textSize="@dimen/customTitle" android:textColorLink="@color/toolbar"
            android:textColorHighlight="@color/toolbar" android:textCursorDrawable="@color/toolbar"/>
    <!--Jótállás-->
    <CheckBox
            android:text="@string/product_jotallas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/warranty"
            app:layout_constraintEnd_toStartOf="@+id/dateField"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/egysegar"
            android:layout_marginEnd="70dp"
            android:textColor="?android:textColorSecondary"
            android:textColorLink="@android:color/transparent"
            android:buttonTint="@color/colorPrimary"
            android:textSize="@dimen/customTitle"/>
    <TextView
            android:text="@string/product_jotallasdate"
            android:textColor="?android:textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label"
            android:textSize="@dimen/customTitle"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/warranty"
            android:visibility="invisible"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:textAlignment="center"
            android:id="@+id/dateField"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/base_date_hint"
            tools:targetApi="o"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/priceField"
            android:backgroundTint="@color/colorPrimary"
            android:visibility="invisible"
            android:focusable="false"
            tools:ignore="KeyboardInaccessibleWidget" android:textSize="@dimen/customTitle"
            android:textColorLink="@color/toolbar" android:textCursorDrawable="@color/toolbar"
            android:textColorHighlight="@color/toolbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>