<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeightLarge"
        android:background="@drawable/border"
        android:id="@+id/list_layout">


    <TextView
            android:text="@string/income_list_name"
            android:layout_width="214dp"
            android:layout_height="27dp"
            android:id="@+id/income_nameField"
            android:layout_marginStart="4dp" android:textStyle="bold" android:textSize="18sp"
            android:textAllCaps="true" android:textAlignment="viewStart" android:layout_marginTop="4dp"
            android:layout_above="@+id/income_dateField" android:layout_marginBottom="8dp"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
    <TextView
            android:text="@string/base_date_hint"
            android:layout_width="214dp"
            android:layout_height="27dp"
            android:id="@+id/income_dateField"
            android:layout_marginStart="4dp" android:textSize="14sp"
            android:textAllCaps="false" android:textAlignment="viewStart" android:layout_marginTop="8dp"
            android:layout_marginBottom="7dp"
            android:layout_alignParentBottom="true" android:layout_alignParentStart="true"/>
    <TextView
            android:text="@string/income_list_amount"
            android:layout_width="163dp"
            android:layout_height="41dp"
            android:id="@+id/income_amountField"
            android:layout_marginEnd="14dp" android:layout_marginTop="20dp"
            android:layout_marginBottom="19dp"
            android:textStyle="italic"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:textSize="24sp" android:layout_alignParentEnd="true" android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"/>
</RelativeLayout>