<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeightLarge"
        android:background="@drawable/border"
        android:id="@+id/list_layout">

    <TextView
            android:text="@string/dream_name"
            android:layout_width="214dp"
            android:layout_height="27dp"
            android:id="@+id/dream_nameField"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:textSize="21sp"
            android:textAllCaps="true"
            android:textAlignment="viewStart"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
    <TextView
            android:text="@string/dream_where"
            android:layout_width="150dp"
            android:layout_height="27dp"
            android:id="@+id/dream_where"
            android:layout_marginStart="8dp"
            android:textSize="21sp"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
    <TextView
            android:text="@string/dream_price"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:id="@+id/dream_price"
            android:layout_marginStart="247dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" android:layout_marginBottom="44dp"/>

</RelativeLayout>